--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ height:100%;
   font-family: 'Homemade Apple', cursive;
   color: red;
   width: 60%;
-  font-size: 36pt;
+  font-size: 30pt;
   line-height: 1.8em;
 }
 
@@ -122,7 +122,7 @@ height:100%;
   text-align: right;
   margin:0 auto;
   margin-top: 2%;
-  font-family: 'Homemade Apple', cursive;
+  font-family: 'Syne Tactile', cursive;
   font-size: 20pt;
   color: red;
   width: 60%;
