--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ p {
 
   .left{
     padding: 30px;
-    background-image: url("/Users/eunjin/Desktop/Eunjin_Thesis/images/논문책/7_8.jpg");
+    background-image: url("https://i.imgur.com/evouwBV.jpg");
     background-size: 95% auto;
     margin-top: -25px;
     margin-bottom: 10px;
