--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rakkas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Metamorphous&display=swap');
 :root {
   --duration: 2s;
   --color-blood: #8a0303;
@@ -13,8 +15,8 @@
 
 body {
   font-family: 'Old Standard TT', serif;
-  background-color: black;
-  color: #feefe5;
+  background-color: #feefe5;
+  color: #aa2724;
   padding: 0px;
   overflow-x: hidden;
   margin-top: 25px;
@@ -83,21 +85,6 @@ b {
   font-weight: 700;
 }
 
-body::-webkit-scrollbar {
-  width: 0.6em;
-  background-color: #FDF1E8;
-}
-
-body::-webkit-scrollbar-track {
-  background-color: #FDF1E8;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #aa2724;
-  border-radius: 30px;
-  -webkit-box-shadow: inset 0 0 0px #ffffff;
-  outline: 4px solid 0px;
-}
 
 ol {
   padding-left: 1.2em;
@@ -119,11 +106,11 @@ ol {
 .title {
   text-align: left;
   font-family: 'Cardo', serif;
-  color: #feefe5;
+  color: #aa2724;
   margin-top: 30px;
-  margin-left: 40px;
+  margin-left: 30px;
   width: 100%;
-  font-size: 72pt;
+  font-size: 50pt;
   line-height: 1.1em;
 
 }
@@ -185,13 +172,12 @@ ol {
     }
 
 .left{
-  background-color: #aa2724;
+  background-color:#feefe5;
   margin-top: -25px;
-background-image: url("https://i.imgur.com/evouwBV.jpg");
 background-size: auto 100%;
 background-repeat: no-repeat;
   padding: 0px;
-  width: 50%;
+  width: 35%;
   height: 100%;
   position: fixed;
   font-weight: 400;
@@ -209,17 +195,17 @@ font-size: 14pt;
   text-align: left;
   margin: 0 auto;
   margin-top: 50px;
-  margin-left: 42px;
+  margin-left: 32px;
   font-family: 'Cardo', serif;
-  font-size: 20pt;
-  color: #feefe5;
+  font-size: 18pt;
+  color: #aa2724;
   width: 100%;
 }
 
 .middle {
   padding: 0px;
     margin-top: -10px;
-  width: 50%;
+  width: 65%;
   vertical-align: top;
   z-index: -100;
 float: right;
@@ -234,7 +220,7 @@ float: right;
   font-family: 'Old Standard TT', serif;
   font-weight: 300;
   width: 90%;
-  margin-left: 30px;
+  margin-left: 31px;
 }
 
 
@@ -257,11 +243,12 @@ float: right;
 .panel, .flip {
   padding: 5px 10px;
   text-align: left;
-  border: solid 0px #c3c3c3;
-  font-size: 20pt;
-  line-height: 1em;
+  border: solid 0px #feefe5;
+  font-size: 24pt;
+  line-height: 1.4em;
   width: 99%;
-  font-family: 'Cardo', serif;
+font-family: 'Cardo', serif;
+font-weight: 400;
   background-color: transparent;
 }
 
@@ -269,7 +256,7 @@ float: right;
   padding: 10px;
   margin-top: -15px;
   display: none;
-  font-size: 20pt;
+  font-size: 18pt;
   text-align: left;
   font-family: 'Old Standard TT', serif;
   font-weight: 300;
@@ -336,16 +323,37 @@ p {
 
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    margin-right: 10px;
+    width: 70px;
+    z-index: 99;
+    font-size: 50px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    padding: 0px;
+    border-radius: 0px;
+  }
+
+  #myBtn:hover {
+    background-color: transparent;
+  }
+
 
   .left{
-    padding: 30px;
-    background-image: url("https://i.imgur.com/evouwBV.jpg");
-    background-size: 95% auto;
+    padding: 20px;
+background-color: #feefe5;
     margin-top: -25px;
     margin-bottom: 10px;
     width: 100%;
-    height: 10%;
+    height: 40%;
     position: relative;
     display: block;
     overflow-x: hidden;
@@ -363,6 +371,8 @@ p {
     z-index: -100;
   float: right;
       overflow: hidden;
+      position: relative;
+      display: block;
   }
 
   .header {
@@ -374,22 +384,24 @@ p {
 
   .title {
     text-align: left;
-    margin: 0 auto;
     margin-top: 0px;
+    margin-left: 0px;
     font-family: 'Cardo', serif;
-    color: #feefe5;
-    width: 100%;
-    font-size: 28pt;
+    color: #aa2724;
+    width: 80%;
+    font-size: 40pt;
     line-height: 1.2em;
   }
+
 
   .name {
     text-align: left;
     margin: 0 auto;
-    margin-top: 15px;
+    margin-left: 15px;
+    margin-top: 40px;
     font-family: 'Cardo', serif;
-    font-size: 12pt;
-    color: #feefe5;
+    font-size: 14pt;
+    color: #aa2724;
     width: 100%;
   }
 
@@ -400,28 +412,29 @@ p {
     font-family: 'Cardo', serif;
     font-weight: 300;
     width: 100%;
-    margin-left: 30px;
+    margin-left: 20px;
     margin-right: 0px;
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .panel, .flip {
-    padding: 0px;
+    padding: 10 10px;
     text-align: left;
-    border: solid 0px #c3c3c3;
-    font-size: 18pt;
-    width: 80%;
+    border: solid 1px #feefe5;
+    font-size: 20pt;
+    width: 87.5%;
+    line-height: 1.4em;
   }
 
   .panel {
     padding: 10px;
     margin-top: -15px;
     display: none;
-    font-size: 13pt;
+    font-size: 12pt;
     text-align: left;
     font-family: 'Old Standard TT', serif;
     font-weight: 300;
-    width: 80%;
+    width: 87.5%;
   }
 
   .responsive {
