--- a/style.css
+++ b/style.css
@@ -26,52 +26,88 @@ body {
   padding: 0px;
   overflow-x: hidden;
   margin-top: 20px;
+  counter-reset: footnotes;
+
 }
 
 sup {
-  font-size: 10pt;
+  content: '[' counter(footnotes) ']'; /* 1 */
+  font-size: 10pt; /* 3 */
+  margin-left: 2px; /* 4 */
+  margin-top: 10px;
+  color: #aa2724; /* 5 */
+  text-decoration: underline; /* 5 */
+  cursor: pointer; /* 5 */
 }
 
-a.footnote {
+
+footer {
   font-size: 12pt;
-   text-decoration:none;
-   background-color: #feefe5;
-   padding-left: 2px;
-   padding-right: 2px;
-   margin-right: 2px;
-   -webkit-transition: all 2s ease;
-   -moz-transition: all 2s ease;
-   -o-transition: all 2s ease;
-   transition: all 2s ease;
+
+  width: 98%;
+  margin-top: 50px;
+  border-top: 0px solid silver;
+  line-height: normal;
+  padding-bottom: 10px;
 }
 
-a.footnote span {
-  font-size: 12pt;
-   z-index: -1;
-   opacity: 0;
-   position: fixed;
-   left: 40px;
-   bottom: 40px;
-   margin-left: 0px;
-   margin-right: 18px;
-   padding:14px 20px;
-   border-radius:4px;
-   border:2px solid #aa2724;
-   background-color: #feefe5;
-   -webkit-transition: all 2s ease;
-   -moz-transition: all 2s ease;
-   -o-transition: all 2s ease;
-   transition: all 2s ease;
+footer ol {
+  padding-left: 20px;
 }
 
-a.footnote:hover span {
-  font-size: 12pt;
-   z-index: 9;
-   opacity: 1;
-   -webkit-transition: all 2s ease;
-   -moz-transition: all 2s ease;
-   -o-transition: all 2s ease;
-   transition: all 2s ease;
+/**
+ * Initialiazing a `footnotes` counter on the wrapper
+ */
+
+/**
+ * Inline footnotes references
+ * 1. Increment the counter at each new reference
+ * 2. Reset link styles to make it appear like regular text
+ */
+[aria-describedby="footnote-label"] {
+  counter-increment: footnotes; /* 1 */
+  text-decoration: none; /* 2 */
+  color: inherit; /* 2 */
+  cursor: default; /* 2 */
+  outline: none; /* 2 */
+}
+
+/**
+ * Actual numbered references
+ * 1. Display the current state of the counter (e.g. `[1]`)
+ * 2. Align text as superscript
+ * 3. Make the number smaller (since it's superscript)
+ * 4. Slightly offset the number from the text
+ * 5. Reset link styles on the number to show it's usable
+ */
+
+/**
+ * Resetting the default focused styles on the number
+ */
+[aria-describedby="footnote-label"]:focus::after {
+  outline: thin dotted;
+  outline-offset: 2px;
+}
+
+[aria-label="Back to content"] {
+  font-size: 0.8em;
+}
+
+/**
+ * Highlight target note
+ */
+footer :target {
+  background: transparent;
+}
+
+/**
+ * Visually hidden yet accessible content
+ */
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  visibility: hidden;
+  opacity: 0;
 }
 
 
@@ -103,7 +139,7 @@ a:hover {
 
 /* selected link */
 a:active {
-  color: #000000;
+  color: #aa2724;
   text-decoration: none;
   font-family: 'Old Standard TT', serif;
 }
@@ -149,6 +185,7 @@ ol {
   width: 100%;
   height: 100%;
   margin-top: 30px;
+margin-left: -50px;
 }
 .halloctober__banner {
   margin: auto;
@@ -165,12 +202,13 @@ ol {
     color: #aa2724;
   font-size: 50pt;
   font-weight: normal;
-  width: 60%;
+  width: 30%;
+  font-weight: 700;
   letter-spacing: 0.1rem;
   margin: auto;
   outline: none;
   position: relative;
-  transform: skew(10deg, 2deg);
+  transform: skew(8deg, 3deg);
   -webkit-animation: float 5s ease-in-out infinite;
           animation: float 5s ease-in-out infinite;
 }
@@ -190,12 +228,12 @@ ol {
   -webkit-animation: move_upper_shadow 5s ease-in-out infinite;
           animation: move_upper_shadow 5s ease-in-out infinite;
   opacity: 0;
-  text-shadow: 6px 0 2px rgba(179, 8, 8, 0.4), 12px 0 2px rgba(26, 35, 126, 0.3);
+  text-shadow: 6px 0 2px rgba(179, 8, 8, 0.4), 12px 0 2px #F8E6E0;
 }
 .typo::after {
   -webkit-animation: move_bottom_shadow 5s ease-in-out infinite;
           animation: move_bottom_shadow 5s ease-in-out infinite;
-  text-shadow: 2px 4px 2px rgba(179, 8, 8, 0.4), 4px 8px 2px rgba(26, 35, 126, 0.3);
+  text-shadow: 2px 4px 2px rgba(179, 8, 8, 0.4), 4px 8px 2px #F8E6E0;
 }
 @-webkit-keyframes move_upper_shadow {
   0%, 90%, 100% {
@@ -260,11 +298,6 @@ ol {
 }
 
 
-.blood {
-  position: absolute;
-  z-index: -100;
-
-}
 .note {
   font-size: 12pt;
   color: #aa2724;
@@ -293,6 +326,7 @@ line-height: normal;
   z-index: -100;
 float: right;
     overflow: hidden;
+
 }
 
 .content {
@@ -304,19 +338,7 @@ float: right;
   font-weight: 300;
   width: 90%;
   margin-left: 31px;
-}
 
-
-.grid-item:hover {
-  opacity: 0.7;
-  -moz-transform: scale(1.07);
-  -webkit-transform: scale(1.07);
-  transform: scale(1.07);
-}
-
-.grid-item h2 {
-  margin-top: 0px;
-  z-index: 100;
 }
 
 .textWithBlur#aa2724Bg:hover :not(img) {
@@ -333,6 +355,7 @@ float: right;
 font-family: 'Cardo', serif;
 font-weight: 400;
   background-color: transparent;
+
 }
 
 .panel {
@@ -411,6 +434,7 @@ p {
     width: 100%;
     height: 100%;
     margin-top: 30px;
+    margin-left:-30px;
   }
   .halloctober__banner {
     margin: auto;
@@ -422,12 +446,15 @@ p {
 
   .typo {
       height: 100%;
+      float: left;
     cursor: default;
     font-family: 'Cardo', serif;
       color: #aa2724;
     font-size: 40pt;
+        padding-bottom: 20px;
     font-weight: normal;
-    width: 60%;
+    width: 50%;
+      font-weight: 700;
     letter-spacing: 0.1rem;
     margin: auto;
     outline: none;
@@ -462,7 +489,6 @@ p {
   .left{
     padding: 20px;
     margin-top: -25px;
-    margin-bottom: 10px;
     width: 100%;
     height: 100%;
     position: relative;
@@ -490,13 +516,11 @@ p {
   .content {
     position: relative;
     height: auto;
-    font-size: 20pt;
-    font-family: 'Cardo', serif;
-    font-weight: 300;
     width: 100%;
     margin-left: 20px;
     margin-right: 0px;
     margin-top: 20px;
+    counter-reset: footnotes;
   }
 
   .panel, .flip {
@@ -516,7 +540,7 @@ p {
     text-align: left;
     font-family: 'Old Standard TT', serif;
     font-weight: 300;
-    width: 87.5%;
+    width: 91%;
   }
 
 
@@ -579,4 +603,17 @@ p {
     width: 100%;
     background-color: transparent;
   }
+  footer {
+    font-size: 12pt;
+    width: 85%;
+    margin-top: 50px;
+    border-top: 0px solid silver;
+    line-height: normal;
+    padding-bottom: 10px;
+  }
+
+  footer ol {
+    padding-left: 20px;
+  }
+
 }
