--- a/style.css
+++ b/style.css
@@ -522,8 +522,8 @@ p {
     width: 100%;
     vertical-align: top;
     z-index: -100;
-    float: right;
-    overflow: hidden;
+    float: left;
+    overflow-x: hidden;
     position: relative;
     display: block;
   }
@@ -535,6 +535,7 @@ p {
     margin-left: 20px;
     margin-right: 0px;
     margin-top: 20px;
+    overflow-x: hidden;
     counter-reset: footnotes;
   }
 
@@ -624,10 +625,12 @@ p {
     border-top: 0px solid silver;
     line-height: normal;
     padding-bottom: 10px;
+    overflow-x: hidden;
   }
 
   footer ol {
     width: 85%;
     padding-left: 30px;
+    overflow-x: hidden;
   }
 }
