--- a/style.css
+++ b/style.css
@@ -2,11 +2,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rakkas&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,300;0,400;1,300;1,400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Metamorphous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kreon:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fondamento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Milonga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rosarivo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap');
 @charset "UTF-8";
+
+@font-face {
+  font-family: 'STIXGeneral';
+  src: url('/files/fonts/stixgeneral-webfont.eot');
+  src: local('STIXGeneral'),local('STIXGeneral-Regular'), url('/files/fonts/stixgeneral-webfont.woff') format('woff'), url('/files/fonts/stixgeneral-webfont.ttf') format('truetype'), url('/files/fonts/stixgeneral-webfont.svg#webfontZXtFAA5Q') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'STIXGeneral';
+  src: url('/files/fonts/stixgeneralitalic-webfont.eot');
+  src: local('STIXGeneralItalic'),local('STIXGeneral-Italic'), url('/files/fonts/stixgeneralitalic-webfont.woff') format('woff'), url('/files/fonts/stixgeneralitalic-webfont.ttf') format('truetype'), url('/files/fonts/stixgeneralitalic-webfont.svg#webfont2oJeLJIt') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'STIXGeneral';
+  src: url('/files/fonts/stixgeneralbol-webfont.eot');
+  src: local('STIXGeneralBol'),local('STIXGeneral-Bold'), url('/files/fonts/stixgeneralbol-webfont.woff') format('woff'), url('/files/fonts/stixgeneralbol-webfont.ttf') format('truetype'), url('/files/fonts/stixgeneralbol-webfont.svg#webfontwFpnxWyx') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
 
 :root {
   --color_base: #191919;
@@ -21,9 +48,10 @@
 }
 
 body {
-  font-family: 'Old Standard TT', serif;
-  background-color: #feefe5;
-  color: #aa2724;
+font-family: 'Belleza', sans-serif;
+background: rgb(254,239,229);
+background: linear-gradient(0deg, rgba(254,239,229,1) 0%, rgba(170,39,36,0.9626225490196079) 100%);
+color: #aa2724;
   padding: 0px;
   overflow-x: hidden;
   margin-top: 20px;
@@ -48,16 +76,21 @@ sup {
 
 footer {
   font-size: 12pt;
-  width: 98%;
+  width: 95%;
   margin-top: 50px;
   border-top: 0px solid silver;
   line-height: normal;
   padding-bottom: 10px;
+
 }
 
 footer ol {
   padding-left: 20px;
+  font-weight: normal;
 }
+
+
+
 
 /**
  * Initialiazing a `footnotes` counter on the wrapper
@@ -125,28 +158,28 @@ a {
 a:link {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 /* visited link */
 a:visited {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 /* mouse over link */
 a:hover {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 /* selected link */
 a:active {
   color: #aa2724;
   text-decoration: none;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
 }
 
 ::selection {
@@ -182,10 +215,17 @@ ol {
   padding-left: 1.2em;
 }
 
+.name {
+  text-align: left;
+  font-size: 12pt;
+  color: #aa2724;
+}
+
+
 .halloctober {
   width: 100%;
   height: 100%;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-left: -50px;
 }
 
@@ -200,7 +240,7 @@ ol {
 .typo {
   height: 100%;
   cursor: default;
-  font-family: 'Cardo', serif;
+font-family: 'Cardo';
   color: #aa2724;
   font-size: 50pt;
   font-weight: normal;
@@ -213,6 +253,10 @@ ol {
   transform: skew(8deg, 3deg);
   -webkit-animation: float 5s ease-in-out infinite;
   animation: float 5s ease-in-out infinite;
+  -moz-transition:all 400ms linear;
+    -webkit-transition:all 400ms linear;
+    -o-transition:all 400ms linear;
+    transition:all 400ms linear;
 }
 
 .typo:hover+.fog {
@@ -233,14 +277,16 @@ ol {
   -webkit-animation: move_upper_shadow 5s ease-in-out infinite;
   animation: move_upper_shadow 5s ease-in-out infinite;
   opacity: 0;
-  text-shadow: 6px 0 2px rgba(179, 8, 8, 0.4), 12px 0 2px #F8E6E0;
+  text-shadow: 6px 0 2px rgba(179, 8, 8, 0.4), 12px 0 2px rgba(249, 231, 225, 0.41);
 }
 
 .typo::after {
   -webkit-animation: move_bottom_shadow 5s ease-in-out infinite;
   animation: move_bottom_shadow 5s ease-in-out infinite;
-  text-shadow: 2px 4px 2px rgba(179, 8, 8, 0.4), 4px 8px 2px #F8E6E0;
+  text-shadow: 2px 4px 2px rgba(179, 8, 8, 0.4), 4px 8px 2px rgba(0, 0, 0, 0.73);
 }
+
+
 
 @-webkit-keyframes move_upper_shadow {
   0%, 90%, 100% {
@@ -249,7 +295,7 @@ ol {
   }
 
   30% {
-    opacity: 1;
+    opacity: 0.5;
     transform: translateX(0);
   }
 }
@@ -261,32 +307,32 @@ ol {
   }
 
   30% {
-    opacity: 1;
+    opacity: 0.8;
     transform: translateX(0);
   }
 }
 
 @-webkit-keyframes move_bottom_shadow {
   0%, 90%, 100% {
-    opacity: 1;
+    opacity: 0.8;
     transform: translate(0, 0);
   }
 
   30% {
     opacity: 0;
-    transform: translateY(-3.5%);
+    transform: translateY(-5.3%);
   }
 }
 
 @keyframes move_bottom_shadow {
   0%, 90%, 100% {
-    opacity: 1;
-    transform: translate(0, 0);
+    opacity: 0.8;
+    transform: translate(3, 10);
   }
 
   30% {
     opacity: 0;
-    transform: translateY(-3.5%);
+    transform: translateY(-5.3%);
   }
 }
 
@@ -322,7 +368,7 @@ ol {
 }
 
 .left {
-  background-color: #feefe5;
+  background-color: transparent;
   margin-top: 0px;
   padding: 0px;
   width: 40%;
@@ -349,7 +395,7 @@ ol {
   margin-top: 20px;
   height: auto;
   font-size: 20pt;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
   font-weight: 300;
   width: 90%;
   margin-left: 31px;
@@ -360,15 +406,27 @@ ol {
 }
 
 .panel, .flip {
-  padding: 5px 0px;
+  padding: 0px 0px;
   text-align: left;
-  border: solid 0px #feefe5;
   font-size: 24pt;
   line-height: 1.4em;
   width: 95%;
-  font-family: 'Cardo', serif;
+font-family: 'Cardo', serif;
+color: #aa2724;
   font-weight: 400;
   background-color: transparent;
+  -moz-transition:all 400ms linear;
+  -webkit-transition:all 400ms linear;
+  -o-transition:all 400ms linear;
+  transition:all 400ms linear;
+}
+
+.panel, .flip:hover {
+	color: rgba(0, 0, 0, 0.73);
+	-moz-transition:all 400ms linear;
+    -webkit-transition:all 400ms linear;
+    -o-transition:all 400ms linear;
+    transition:all 400ms linear;
 }
 
 .panel {
@@ -378,11 +436,12 @@ ol {
   display: none;
   font-size: 18pt;
   text-align: left;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
   font-weight: 300;
   width: 95%;
   line-height: 1.2em;
   background-color: transparent;
+  color: #aa2724;
 }
 
 .secret {
@@ -391,7 +450,7 @@ ol {
   display: none;
   font-size: 20pt;
   text-align: left;
-  font-family: 'Old Standard TT', serif;
+font-family: 'Belleza', sans-serif;
   font-weight: 300;
   width: 100%;
   background-color: transparent;
@@ -465,7 +524,7 @@ p {
     height: 100%;
     float: left;
     cursor: default;
-    font-family: 'Cardo', serif;
+font-family: 'Cardo', serif;
     color: #aa2724;
     font-size: 40pt;
     padding-bottom: 20px;
@@ -484,8 +543,8 @@ p {
   #myBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
-    margin-right: -30px;
+    bottom: 30px;
+    margin-right: -10px;
     width: 70px;
     z-index: 99;
     font-size: 50px;
@@ -522,10 +581,11 @@ p {
     width: 100%;
     vertical-align: top;
     z-index: -100;
-    float: left;
-    overflow-x: hidden;
+    float: right;
+    overflow: hidden;
     position: relative;
     display: block;
+    font-size: 14pt;
   }
 
   .content {
@@ -535,16 +595,16 @@ p {
     margin-left: 20px;
     margin-right: 0px;
     margin-top: 20px;
-    overflow-x: hidden;
     counter-reset: footnotes;
+    font-size: 14pt;
   }
 
   .panel, .flip {
-    padding: 0 0px;
+    padding: 10 10px;
     text-align: left;
     border: solid 0px #feefe5;
-    font-size: 18pt;
-    width: 100%;
+    font-size: 20pt;
+    width: 95%;
     line-height: 1.4em;
   }
 
@@ -552,54 +612,13 @@ p {
     padding: 0px;
     margin-top: -15px;
     display: none;
-    font-size: 12pt;
+    font-size: 14pt;
     text-align: left;
-    font-family: 'Old Standard TT', serif;
-    font-weight: 300;
-    width: 100%;
+  font-family: 'Belleza', sans-serif;
+    font-weight: 500;
+    width: 95%;
   }
 
-  a.footnote {
-    font-size: 12pt;
-    text-decoration: none;
-    background-color: #feefe5;
-    padding-left: 2px;
-    padding-right: 2px;
-    margin-right: 2px;
-    -webkit-transition: all 2s ease;
-    -moz-transition: all 2s ease;
-    -o-transition: all 2s ease;
-    transition: all 2s ease;
-  }
-
-  a.footnote span {
-    font-size: 12pt;
-    z-index: -1;
-    opacity: 0;
-    position: fixed;
-    bottom: 30px;
-    width: 82%;
-    margin-left: -20px;
-    margin-right: 10px;
-    padding: 14px 20px;
-    border-radius: 4px;
-    border: 2px solid #aa2724;
-    background-color: #feefe5;
-    -webkit-transition: all 2s ease;
-    -moz-transition: all 2s ease;
-    -o-transition: all 2s ease;
-    transition: all 2s ease;
-  }
-
-  a.footnote:hover span {
-    font-size: 12pt;
-    z-index: 9;
-    opacity: 1;
-    -webkit-transition: all 2s ease;
-    -moz-transition: all 2s ease;
-    -o-transition: all 2s ease;
-    transition: all 2s ease;
-  }
 
   .responsive {
     width: 100%;
@@ -612,7 +631,7 @@ p {
     display: none;
     font-size: 10pt;
     text-align: left;
-    font-family: 'Old Standard TT', serif;
+  font-family: 'Belleza', sans-serif;
     font-weight: 300;
     width: 100%;
     background-color: transparent;
@@ -620,17 +639,15 @@ p {
 
   footer {
     font-size: 12pt;
-    width: 85%;
-    margin-top: 50px;
+    width: 100%;
+    margin-top: 45px;
     border-top: 0px solid silver;
     line-height: normal;
     padding-bottom: 10px;
-    overflow-x: hidden;
   }
 
   footer ol {
     width: 85%;
     padding-left: 30px;
-    overflow-x: hidden;
   }
 }
