--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kreon:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fondamento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Milonga&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rosarivo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap');
@@ -43,8 +49,7 @@
 
 body {
 font-family: 'Belleza', sans-serif;
-background: rgb(254,239,229);
-background: linear-gradient(0deg, rgba(254,239,229,1) 0%, rgba(170,39,36,0.9626225490196079) 100%);
+background-color: #f2dcd4;
 color: #aa2724;
   padding: 0px;
   overflow-x: hidden;
@@ -416,7 +421,7 @@ color: #aa2724;
 }
 
 .panel, .flip:hover {
-	color: rgba(249, 231, 225, 0.41);
+	color: #f2dcd4;
 	-moz-transition:all 400ms linear;
     -webkit-transition:all 400ms linear;
     -o-transition:all 400ms linear;
@@ -642,6 +647,6 @@ font-family: 'Cardo', serif;
 
   footer ol {
     width: 85%;
-    padding-left: 30px;
+    padding-left: 20px;
   }
 }
