--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ ol {
   font-size: 24pt;
   line-height: 1.4em;
   width: 95%;
-  font-family: 'iowanoldst_btbold_italic';
+  font-family: 'iowanoldst_btbold';
   color: #aa2724;
   font-weight: 400;
   background-color: transparent;
@@ -506,7 +506,15 @@ p {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
+
+  body {
+    padding: 20px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
+  }
+
   .halloctober {
     width: 100%;
     height: 100%;
@@ -528,7 +536,7 @@ p {
     cursor: default;
     font-family: 'iowanoldst_blk_btblack';
     color: #feefe5;
-    font-size: 40pt;
+    font-size: 30pt;
     padding-bottom: 20px;
     width: 50%;
     letter-spacing: 0.1rem;
@@ -562,7 +570,7 @@ p {
   }
 
   .left {
-    padding: 20px;
+    padding: 0px;
     margin-top: -25px;
     width: 100%;
     height: 100%;
@@ -570,9 +578,6 @@ p {
     display: block;
     overflow-x: hidden;
     overflow-y: visible;
-    font-family: 'Noto Serif', serif;
-    font-size: 14pt;
-    line-height: 1.2;
   }
 
   .middle {
@@ -581,8 +586,7 @@ p {
     width: 100%;
     vertical-align: top;
     z-index: -100;
-    float: right;
-    overflow: hidden;
+    float: left;
     position: relative;
     display: block;
     font-size: 14pt;
@@ -592,19 +596,21 @@ p {
     position: relative;
     height: auto;
     width: 100%;
-    margin-left: 20px;
+    margin-left: 0px;
     margin-right: 0px;
     margin-top: 00px;
     counter-reset: footnotes;
-    font-size: 14pt;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
   }
 
   .panel, .flip {
     padding: 10 10px;
     text-align: left;
     border: solid 0px #feefe5;
-    font-size: 20pt;
-    width: 95%;
+    font-size: 18pt;
+    width: 100%;
     line-height: 1.4em;
   }
 
@@ -616,7 +622,10 @@ p {
     text-align: left;
     font-family: 'Belleza', sans-serif;
     font-weight: 500;
-    width: 95%;
+    width: 100%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
   }
 
   .responsive {
@@ -643,10 +652,17 @@ p {
     border-top: 0px solid silver;
     line-height: normal;
     padding-bottom: 10px;
+    display: block;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
   }
 
   footer ol {
-    width: 85%;
-    padding-left: 20px;
+    width: 90%;
+    padding-left: 23px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
   }
 }
