--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ b {
 }
 
 ol {
-  padding-left: 1.2em;
+  padding-left: 0em;
 }
 
 .name {
@@ -514,20 +514,20 @@ p {
   .halloctober {
     width: 100%;
     height: 100%;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: -30px;
   }
 
   .halloctober__banner {
     margin: auto;
-    padding: 0px;
+    padding: 30px;
     height: 100%;
+    width: 100%;
     position: relative;
     overflow: hidden;
   }
 
   .typo {
-    margin-top: 20px;
     height: 100%;
     float: left;
     cursor: default;
@@ -567,7 +567,9 @@ p {
   }
 
   .left {
-    background-size: cover;
+    background-image: url("https://i.imgur.com/hAXCFCi.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
     padding: 0px;
     margin-top: -25px;
     width: 100%;
@@ -646,17 +648,28 @@ p {
   footer {
     font-size: 12pt;
     width: 100%;
-    margin-top: 45px;
+    margin-top: 0px;
     border-top: 0px solid silver;
     line-height: normal;
     padding-bottom: 10px;
     display: block;
     overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
+  float: left;
   }
 
   footer ol {
-    width: 100%;
+    width: 90%;
     float: left;
+    padding-left: 25px;
     overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
+    font-weight: normal;
+  }
+
+  ol {
+    padding-left: 0em;
   }
 }
