--- a/style.css
+++ b/style.css
@@ -533,9 +533,9 @@ p {
     cursor: default;
     font-family: 'iowanoldst_blk_btblack';
     color: #feefe5;
-    font-size: 24pt;
+    font-size: 28pt;
     padding-bottom: 20px;
-    width: 60%;
+    width: 70%;
     letter-spacing: 0.1rem;
     margin: auto;
     outline: none;
@@ -569,7 +569,7 @@ p {
   .left {
     background-image: url("https://i.imgur.com/hAXCFCi.png");
     background-repeat: no-repeat;
-    background-size: 120%;
+    background-size: auto;
     padding: 0px;
     margin-top: -25px;
     width: 100%;
