--- a/style.css
+++ b/style.css
@@ -508,14 +508,14 @@ p {
 @media screen and (max-width: 600px) {
 
   body {
-    padding: 20px;
+  padding-left: 20px;
   }
 
   .halloctober {
     width: 100%;
     height: 100%;
     margin-top: 30px;
-    margin-left: -30px;
+    margin-left: -10px;
   }
 
   .halloctober__banner {
@@ -535,7 +535,7 @@ p {
     color: #feefe5;
     font-size: 28pt;
     padding-bottom: 20px;
-    width: 70%;
+    width: 60%;
     letter-spacing: 0.1rem;
     margin: auto;
     outline: none;
@@ -569,7 +569,7 @@ p {
   .left {
     background-image: url("https://i.imgur.com/hAXCFCi.png");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100%;
     padding: 0px;
     margin-top: -25px;
     width: 100%;
@@ -609,9 +609,12 @@ p {
     padding: 10 10px;
     text-align: left;
     border: solid 0px #feefe5;
-    font-size: 18pt;
-    width: 100%;
+    font-size: 16pt;
+    width: 99%;
     line-height: 1.4em;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  hyphens: auto;
   }
 
   .panel {
