--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ ol {
 
 .left {
   background-color: transparent;
-  background-image: url("https://i.imgur.com/hAXCFCi.png");
+  background-image: url("https://i.imgur.com/eZrprLb.png");
   background-repeat: no-repeat;
   background-size: 100%;
   margin-top: 0px;
@@ -567,7 +567,7 @@ p {
   }
 
   .left {
-    background-image: url("https://i.imgur.com/hAXCFCi.png");
+    background-image: url("https://i.imgur.com/eZrprLb.png");
     background-repeat: no-repeat;
     background-size: 100%;
     padding: 0px;
